# tool-affordances

./: .gitignore  CMakeLists.txt  NTDforToolDetection.ini  README.md
MATLAB/TCDS2016/: initYarp.m  (+16 more)
app/: CMakeLists.txt  test_afford.lua
app/LUA/: readme.md
app/LUA/aff-explorer/: CMakeLists.txt  aff-explorer.lua
app/LUA/aff-explorer-TCDS/: CMakeLists.txt  aff-explorer-TCDS_helper.lua  yarp_helper.lua
app/LUA/table_clean_SM/: demoFunctionCalls.md  readme.md  xp_funcs.lua  xp_interact_fsm.lua  xp_root_fsm.lua
app/LUA/xp_demo/: xp_funcs.lua  xp_interact_fsm.lua  xp_main.lua  xp_root_fsm.lua
app/conf/: 50tools.ini  affTest  affsTCDS.txt  affs_DEMO.txt  affs_XPERIENCE_hist.txt  configSim_forTools.ini  kinematic_offsets_forTools.ini  objectFinder.ini  objectFinderSim.ini  positionFilter.ini  positionFilterSim.ini  readme.txt  realTools.ini  toolBlobber.ini  toolBlobberSim.ini
app/data/: affsTCDS.txt  affsTCDS_4_COMPLETE_fixing.txt  affsTCDS_4_hok6.txt  affsTCDS_COMPLETE_FIXED.txt  affsTCDS_withShovel.txt
app/modules/: SFM.xml  actionsRenderingEngine.xml  caffeCoder.xml  graphBasedSegmentation.xml  himrepClassifier.xml  iolStateMachineHandler.xml  karmaMotor.xml  karmaToolFinder.xml  karmaToolProjection.xml  linearClassifier.xml  motionCut.xml  sparseCoder.xml  templatePFTracker.xml  yarpview.xml
app/scripts/: KARMA_app.xml.template  TestSegment.xml  Xperience_demo_APP.xml.template  Xperience_learn_APP.xml.template  Xperience_toolAff_APP.xml.template  affExp_Dumpers.xml  affExp_Dumpers.xml.template  affExp_DumpersSIM.xml  affExp_DumpersSIM.xml.template  blobSpotterApp.xml  featExt_Dumpers.xml  graspChecker_APP.xml.template  handClassfier_APP.xml.template  icubSim_Startup.xml  icubSim_Startup.xml.template  learnAffordancesApp-RecordedData.xml.template  learnAffordancesApp.xml  learnAffordancesApp.xml.template  learnAffordancesAppSIM.xml  learnAffordancesAppSIM.xml.template  learnAffordancesAppTest.xml  learnAffordancesPoint.xml  ltr.xml  readme.md  tool3DAff_Dumper.xml.template  tool3DAff_DumpersSIM.xml.template  tool3DAffordances_APP.xml.template  tool3DAffordances_APPSIM.xml  tool3DAffordances_APPSIM.xml.template  toolClassfier_APP.xml.template  tool_use_demo.xml.template
app/scripts/lua/: pm_drop.lua  pm_take.lua  pm_take_helper.lua
app/scripts/monitors/: pm_drop.lua  pm_drop_clas.lua  pm_take.lua  pm_take_helper.lua
modules/: CMakeLists.txt
modules/aff-explorer/: CMakeLists.txt  aff-explorer-TCDS.lua  aff-explorer-TCDS_helper.lua  aff-explorer.lua  aff-explorer.xml  aff-explorer_helper.lua  aff-xperience.lua  aff-xperience_helper.lua  yarp_helper.lua
modules/aff-explorer-TCDS/: aff-explorer-TCDS.lua
modules/affCollector/: CMakeLists.txt  affCollector.thrift  affCollector.xml  affCollector_thrift.cmake
modules/affCollector/include/: affCollector.h  affCollector_IDLServer.h
modules/affCollector/src/: affCollector.cpp  affCollector_IDLServer.cpp
modules/affLearn/: affLearn.xml
modules/affLearn/include/: affLearn.h
modules/affLearn/src/: affLearn.cpp
modules/affManager/: CMakeLists.txt  CMakeLists_StandAlone.txt  actionsRenderingEngine.xml  affManager.thrift  affManager.xml  affManager_thrift.cmake  startAffEnv.cpp
modules/affManager/include/: affManager.h  affManager_IDLServer.h
modules/affManager/src/: affManager.cpp  affManager_IDLServer.cpp
modules/affMotor/: CMakeLists.txt  affMotor.xml  main.cpp
modules/affStateMachine/: CMakeLists.txt  affRFSM.lua  affStateMachine.xml  askAndLookSM.lua  main.lua
modules/blob3Dinfo/: CMakeLists.txt  blob3Dinfo.thrift  blob3Dinfo.xml  blob3Dinfo_thrift.cmake
modules/blob3Dinfo/include/: blob3Dinfo.h  blob3Dinfo_IDLServer.h  info3D.h
modules/blob3Dinfo/src/: blob3Dinfo.cpp  blob3Dinfo_IDLServer.cpp  blob3Dinfo_starter.cpp  info3D.cpp
modules/blobPicker/: CMakeLists.txt  blobPicker.cpp  blobPicker.h  blobPicker.xml  blobPicker_starter.cpp
modules/blobSpotter/: CMakeLists.txt  blobSpotter.thrift  blobSpotter.xml  blobSpotter_thrift.cmake
modules/blobSpotter/app/: CMakeLists.txt
modules/blobSpotter/include/: blobSpotter.h  blobSpotter_IDLServer.h  colorhistogram.h  histogram.h  objectFinder.h
modules/blobSpotter/src/: blobSpotter.cpp  blobSpotter_IDLServer.cpp  main.cpp
modules/drop-away/: CMakeLists.txt  drop-away.lua
modules/exploreAffordances/: CMakeLists.txt  askForTool.cpp
modules/feat2DExt/: CMakeLists.txt  feat2DExt.xml  vecvec.thrift
modules/feat2DExt/include/: CurveCSS.h  Feature.h  VecVec.h  contourFeats.h  wavelet.h
modules/feat2DExt/src/: CurveCSS.cpp  contourFeats.cpp  featExt.cpp  thinning.cpp  wavelet.cpp
modules/featExt/: CMakeLists.txt  featExt.xml  vecvec_thrift.cmake
modules/featExt/include/: CurveCSS.h  Feature.h  VecVec.h  contourFeats.h  featExt.h  thinning.h
modules/featExt/src/: CurveCSS.cpp  Feature.cpp  VecVec.cpp  contourFeats.cpp  featExt.cpp  featExt_starter.cpp  wavelet.cpp
modules/graspChecker/: CMakeLists.txt  README.md  graspChecker.thrift  graspChecker.xml
modules/graspChecker/include/: BoundingBox.h  graspChecker.h
modules/graspChecker/src/: graspChecker.cpp
modules/learnAffordance/: CMakeLists.txt  learnAffordance.cpp  learnAffordance.h  learnAffordance.xml  learnAffordance_starter.cpp
modules/objectFinder/: CMakeLists.txt  objectFinder.cpp  objectFinder.xml
modules/obsolete/affLearn/: CMakeLists.txt
modules/obsolete/objectFinder/: CMakeLists.txt  objectFinder.cpp
modules/positionFilter/: CMakeLists.txt  positionFilter.cpp  positionFilter.xml
modules/simtoolloader/: CMakeLists.txt  simtoolloader.xml
modules/stateMachine/: askAndLookSM.lua  main.lua  pppRFSM.lua  stateMachine.xml
modules/tool3DManager/: CMakeLists.txt  tool3DManager.thrift  tool3DManager.xml
modules/toolBlobber/: CMakeLists.txt  toolBlobber.xml
modules/toolPointer/: CMakeLists.txt  toolPointer.xml
modules/toolRecognizer/: CMakeLists.txt  toolRecognizer.thrift  toolRecognizer.xml  toolRecognizer_thrift.cmake
modules/xperience_sm/: CMakeLists.txt  affs_XPERIENCE.txt  xp_funcs.lua  xp_interact_fsm.lua  xp_main.lua  xp_root_fsm.lua  xperience_sm.xml
(+319 files in other folders)
